--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = --inputs C:/Users/chris/github/census-geocoder/tests/input_files
+addopts = -nauto --cov=census_geocoder --inputs C:/Users/chris/github/census-geocoder/tests/input_files
 filterwarnings =
     ignore
