--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -5,3 +5,7 @@ pytest-cov==2.12.1
 pytest-xdist==2.3.0
 requests==2.26.0
 validator-collection==1.5.0
+Sphinx>=4.1.2
+sphinx-panels>=0.6.0
+sphinx-rtd-theme>=0.5.2
+sphinx-tabs>=3.2.0
