--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ commands =
 description =
     Run code coverage checks.
 setenv =
-    PYTEST_ADDOPTS = --cov ./census-geocoder --cov-config {toxinidir}/setup.cfg
+    PYTEST_ADDOPTS = --cov ./census_geocoder --cov-config {toxinidir}/setup.cfg
 deps =
     pytest
     pytest-cov
